--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,14 @@
 @import url("./fonts.css");
 @import url("./interactive.css");
-@import url("./prism.css");
 
 body {
 	font-size: 16px;
 	color: gray;
 	background: #111;
 	font-family: "Noto Sans", sans-serif;
-	margin: 1em;
-	padding: 1em;
-	outline: 1px dotted lightgreen;
+	margin: 0em;
+	padding: 0em;
+	//outline: 1px dotted lightgreen;
 }
 
 h1, h2, h3, h4, h5, h6 {
