--- a/coptic/dictionary_editor/styles/styles.css
+++ b/coptic/dictionary_editor/styles/styles.css
@@ -111,6 +111,7 @@ code {
 	tab-size: 1em;
 	//border-bottom: .25em solid #222 !important;
 	outline: none;
+	caret-color: lightgreen;
 }
 
 #rendered_view {
